# novomatic-internship-tasks

./: .gitignore  LICENSE  README.md
t1-data-compression/: CMakeLists.txt  README-pl.md  README.md
t1-data-compression/include/: Array2D.h  CompressedData.h  Data.h  DataCompressor.h
t1-data-compression/tests/: CMakeLists.txt
t1-data-compression/tests/src/: Array2DCompressionTest.cpp  VectorCompressionTest.cpp
t2-ticket-machine/: CMakeLists.txt  README-pl.md  README.md
t2-ticket-machine/include/core/: TicketMachine.h
t2-ticket-machine/include/core/algorithm/: ChangeCalculator.h  GreedyChangeCalculator.h
t2-ticket-machine/include/core/hardware/: CoinAcceptor.h  HardwareError.h  HardwareInterface.h  HardwareResult.h  TicketPrinter.h
t2-ticket-machine/include/core/model/: CoinDesc.h  CoinValue.h  IssuedTicket.h  Ticket.h
t2-ticket-machine/include/core/provider/: TicketProvider.h
t2-ticket-machine/include/demo/: DemoTicketMachine.h
t2-ticket-machine/include/demo/algorithm/: DemoChangeCalculator.h
t2-ticket-machine/include/demo/hardware/: DemoCoinAcceptor.h  DemoTicketPrinter.h
t2-ticket-machine/include/demo/provider/: DemoTicketProvider.h
t2-ticket-machine/src/cli/: Application.cpp  Application.h  MainPage.cpp  MainPage.h  Page.cpp  Page.h  TicketPage.cpp  TicketPage.h  cli.cpp
t2-ticket-machine/src/core/: TicketMachine.cpp
t2-ticket-machine/src/core/algorithm/: GreedyChangeCalculator.cpp
t2-ticket-machine/src/core/hardware/: CoinAcceptor.cpp  HardwareInterface.cpp
t2-ticket-machine/src/demo/: DemoTicketMachine.cpp
t2-ticket-machine/src/demo/algorithm/: DemoChangeCalculator.cpp
t2-ticket-machine/src/demo/hardware/: DemoCoinAcceptor.cpp  DemoTicketPrinter.cpp
t2-ticket-machine/src/demo/provider/: DemoTicketProvider.cpp
t2-ticket-machine/tests/: CMakeLists.txt
t2-ticket-machine/tests/core/algorithm/: GreedyChangeCalculatorTest.cpp
t2-ticket-machine/tests/demo/algorithm/: DemoChangeCalculatorTest.cpp
t3-collision-detection/: CMakeLists.txt  README-pl.md  README.md  SolgenLists.lua
t3-collision-detection/src/CollisionDetector/: CollisionDetector.cpp  CollisionDetector.h  triangle.h  vec.h  vec2.h  vec3.h
t3-collision-detection/src/visualizer/: Visualizer.cpp  VisualizerContent.cpp  VisualizerContent.h
t3-collision-detection/src/visualizer/resources/: RoundedBackground.lua  Visualizer.xml
t3-collision-detection/src/visualizer/ui/: VisualizerLayer.cpp  VisualizerLayer.h  VisualizerScene.cpp  VisualizerScene.h  VisualizerWidget.cpp  VisualizerWidget.h
t3-collision-detection/tests/: CMakeLists.txt
t3-collision-detection/tests/src/CollisionDetector/: CollisionDetectorTest.cpp  Vec2Test.cpp  Vec3Test.cpp
